name:                scheme48
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ilmari Vacklin
maintainer:          ilmari.vacklin@reaktor.fi
build-type:          Simple
cabal-version:       >=1.10

executable scheme48
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, parsec, mtl
  default-language:    Haskell2010
  ghc-options:         -Wall
